# corewars-compiler

./: .gitignore  .ocamlformat  Dockerfile  LANGUAGE.md  Makefile  README.md  REFERENCE.md  TUTORIAL.md  commands.md  compose-dev.yaml  corewars_compiler.opam  dune-project  dune-workspace
.docker/: Dockerfile  compose-dev.yaml
bbctests/examples/: prog0.bbc  prog1.bbc  prog10.bbc  prog2.bbc  prog3.bbc  prog4.bbc  prog5.bbc  prog6.bbc  prog7.bbc  prog8.bbc
dev/: analyse.ml  ast.ml  compile.ml  dune  lib.ml  parse.ml  red.ml  util.ml  verify.ml
examples/: prog0.src  prog1.src  prog2.src  prog3.src  prog4.src  prog5.src  prog6.src  prog7.src  prog8.src
examples/old/: prog5.src
execs/: dune  run_compile.ml  run_test.ml
lib/common/: dune  error.ml  gensym.ml  loc.ml  pp.ml
lib/driver/: compile.ml  config.ml  dune
lib/middle_end/: codegen.ml  dune  red.ml
lib/parsing/: Makefile  driver.ml  dune  lexer.ml  parser.mly  parserMessages.messages  parserMessages.messages.bak
lib/syntax/: Analyze.ml  analize2.ml  arg.ml  arg_stored.ml  ast.ml  ast_typed.ml  dune  prim.ml  resolve.ml  store.ml  type.ml  typed_ast.ml  uniquify.ml
lib/typechecking/: dune  static.ml
pmars/: AUTHORS  ChangeLog  pmars
pmars/config/: 94m.opt  94t.opt  94x.opt  icws.opt  nano.opt  tiny.opt  tinylp.opt
rt/pmars-0.9.4/config/: 88.opt  94.opt  94b.opt  94nop.opt  94xm.opt  lp.opt  mp.opt
rt/pmars-0.9.4/doc/: corewar-faq.html  corewar-glossary.html  pmars.6  pmars.txt
rt/pmars-0.9.4/src/: Makefile  asm.c  cdb.c  clparse.c  disasm.c  eval.c  global.c  (+5 more)
src/: analyse.ml  dune  red.ml
(+2 files in other folders)
